# libpcsc-cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-linux-fedora.yml  cmake-linux-ubuntu.yml  cmake-macos.yml  cmake-windows.yml  cmake.yml  codeql-analysis.yml
docs/: DEVELOPMENT.md
include/flag-set-cpp/: flag_set.hpp
include/magic_enum/: magic_enum.hpp
include/pcsc-cpp/: comp_winscard.hpp  pcsc-cpp-utils.hpp  pcsc-cpp.hpp
scripts/: clang-format.sh
src/: Context.hpp  Reader.cpp  SCardCall.hpp  SmartCard.cpp  listReaders.cpp  utils.cpp
tests/integration/: test-pcsc-cpp.cpp
tests/mock/: test-connect-to-card-transmit-apdus.cpp  test-select-card-reader-and-card.cpp
